# wds-mod-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.bat  pyproject.toml
docs/: 使用说明.md
references/: 游戏原生参考文件结构.txt
src/wds/: __init__.py  backup.py  installer.py  matcher.py  models.py  operation_log.py  registry.py  scanner.py  utils.py
src/wds/cli/: __init__.py  app.py  display.py  install_cmd.py  manage_cmd.py  review.py  scan_cmd.py  status_cmd.py
src/wds_mod_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_backup.py  test_display.py  test_install_cmd.py  test_installer.py  test_integration.py  test_manage_cmd.py  test_matcher.py  test_models.py  test_registry.py  test_review.py  test_scan_cmd.py  test_scanner.py  test_skeleton.py  test_smoke_cli.py  test_status_cmd.py  test_utils.py
